# notes_api_on_the_fastapi

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
notes-app/: main.py
notes-app/alembic/: env.py
notes-app/alembic/versions/: 2024_08_29_0641-33ea026c9014_add_user_model.py  2024_08_29_0723-ba658c9fdc21_add_user_relationsheep_to_note.py  2024_08_29_2325-7a7e65ae5eec_add_datetime_field_in_note.py
notes-app/api/: router.py  validators.py
notes-app/api/endpoints/: __init__.py  note.py  user.py
notes-app/core/: __init__.py  base.py  config.py  db.py  db_manager.py  user.py  utils.py
notes-app/crud/: __init__.py  base.py  note.py
notes-app/models/: __init__.py  note.py  user.py
notes-app/schemas/: __init__.py  note.py
