[tool.poetry]
name = "notes on the fastapi"
version = "0.1.0"
description = "Application for adding custom notes"
authors = ["Aleksandr Rol <rolaleksandr75@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
pydantic-settings = "^2.4.0"
uvicorn = {extras = ["standart"], version = "^0.30.6"}

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
