[tool.poetry]
name = "notes on the fastapi"
version = "0.1.0"
description = "Application for adding custom notes"
authors = ["Aleksandr Rol <rolaleksandr75@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
pydantic-settings = "^2.4.0"
uvicorn = {extras = ["standart"], version = "^0.30.6"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
asyncpg = "^0.29.0"
alembic = "^1.13.2"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
